# OOP

CLionProjects/Assignment3/: CMakeLists.txt  Entities.c  Service.c  UI.h  main.c
CLionProjects/Assignment4/: CMakeLists.txt  Entities.c  Repository.h  Service.h  UI.c  main.c
CLionProjects/Assignment5/: Chore.cpp  DynamicVector.h  FakeRepository.cpp  FileManager.h  main.cpp
CLionProjects/DSALab6/: CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixIterator.cpp  MatrixIterator.h  main.cpp
CLionProjects/DSALab7/: CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h  main.cpp
CLionProjects/Lab5SDA/: CMakeLists.txt  DynamicArray.h  Heap.cpp  Heap.h  P2.cpp  P2.h  main.cpp
CLionProjects/PB1Serv/: CMakeLists.txt
CLionProjects/Practice2/: Analysis.cpp  Analysis.h  BMI.cpp  BMI.h  BPI.cpp  BPI.h  CMakeLists.txt  Console.cpp  Console.h  Person.cpp  Person.h  Service.cpp  Service.h
CLionProjects/SDALAb2/: CMakeLists.txt  Iterator.cpp  Iterator.h  SortedSet.cpp  SortedSet.h  main.cpp
CLionProjects/SDALab4/: CMakeLists.txt  SMMIterator.cpp  SMMIterator.h  SortedMultiMap.cpp  SortedMultiMap.h
CLionProjects/Seminar2/: CMakeLists.txt  Song.cpp  Song.h
CLionProjects/Test/: CMakeLists.txt  Console.cpp  Console.h  DynamicVector.h  PowerWord.cpp  PowerWord.h  Repository.cpp  Repository.h  (+3 more)
__MACOSX/: ._labs oop
labs oop/Assignment5/: CMakeLists.txt  Chore.h  FakeRepository.h  FileManager.cpp  Repository.cpp  Repository.h  Service.cpp  Service.h  Tests.cpp  Tests.h  UI.cpp  UI.h  Validator.cpp  Validator.h
(+72 files in other folders)
